* Removed overflow:hidden from Calendar container for non-IE6 browsers to fix clipping issue with IE7. [fix bug 1229497]
* Fixed use of YAHOO.env.ua.YY <  XX checks, to account for YAHOO.env.ua.YY == 0

* Changed iframe property behavior, to allow iframe shim to be enabled for non-IE6 browsers.  Defaults to true for < IE6, false for non-IE6

--- a/widget/calendar/src/css/calendar-core.css
+++ b/widget/calendar/src/css/calendar-core.css
@@ -1,18 +1,26 @@
 .yui-calcontainer {
 	position:relative;
 	float:left;
-	overflow:hidden;
+	_overflow:hidden; /* IE6 only, to clip iframe shim */
 }
 
 .yui-calcontainer iframe {
 	position:absolute;
 	border:none;
 	margin:0;padding:0;
-	left:-1px;
-	top:-1px;
 	z-index:0;
+	width:100%;
+	height:100%;
+	left:0px;
+	top:0px;
+}
+
+/* IE6 only */
+.yui-calcontainer iframe.fixedsize {
 	width:50em;
 	height:50em;
+	top:-1px;
+	left:-1px;
 }
 
 .yui-calcontainer.multi .groupcal {
@@ -48,6 +56,7 @@
 .yui-calendar .calheader {
 	position:relative;
 	width:100%;
+	text-align:center;
 }
 
 /* Specific changes for calendar running under fonts/reset */
