--- a/widget/calendar/src/css/calendar.css
+++ b/widget/calendar/src/css/calendar.css
@@ -4,18 +4,26 @@
 	background-color:#F7F9FB;
 	border:1px solid #7B9EBD;
 	float:left;
-	overflow:hidden;
+	_overflow:hidden; /* IE6 only, to clip iframe shim */
 }
 
 .yui-calcontainer iframe {
 	position:absolute;
 	border:none;
 	margin:0;padding:0;
-	left:-1px;
-	top:-1px;
 	z-index:0;
+	width:100%;
+	height:100%;
+	left:0px;
+	top:0px;
+}
+
+/* IE6 only */
+.yui-calcontainer iframe.fixedsize {
 	width:50em;
 	height:50em;
+	top:-1px;
+	left:-1px;
 }
 
 .yui-calcontainer.multi {
